<resources>
    <string name="app_name">LayoutProject</string>
    <string name="button_1">Button 1</string>
    <string name="button_2">Button 2</string>
    <string name="checkbox_1">CheckBox 1</string>
    <string name="checkbox_2">CheckBox 2</string>
    <string name="radio_1">Radio 1</string>
    <string name="checkbox_3">CheckBox 3</string>
    <string name="checkbox_4">CheckBox 4</string>
    <string name="radio_2">Radio 2</string>
    <string name="image_description">Logo for the Avenger Endgame film</string>
</resources>
